# jdkv2

./: .env.example  .gitignore  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: attachments.py  auth.py  customers.py  inventory.py  mrp.py  orders.py  products.py  reports.py  suppliers.py  users.py
backend/app/core/: config.py  database.py  errors.py  mailer.py  notify_channels.py  search_providers.py  security.py
backend/app/domain/attachments/: repository.py  service.py
backend/app/domain/customers/: repository.py  search_provider.py  service.py
backend/app/domain/inventory/: repository.py  search_provider.py  service.py
backend/app/domain/orders/: repository.py  search_provider.py  service.py
backend/app/domain/products/: repository.py  search_provider.py  service.py
backend/app/domain/suppliers/: repository.py  search_provider.py  service.py
backend/app/domain/users/: repository.py  service.py
backend/app/intelligence/: dashboard.py  feasibility_engine.py  mrp_engine.py
backend/app/models/: attachments.py  customers.py  inventory.py  mrp.py  orders.py  products.py  suppliers.py  users.py
backend/app/permissions/: definitions.py
backend/scripts/: create_admin.py  debug_schema.py  init_db.py  install.py
backend/sql/: schema.sql
docs/: 01-product.md  02-business-model.md  03-domain-model.md  04-application-model.md  05-intelligence-model.md  06-architecture.md  07-security-and-roles.md  08-development-guide.md  README.md
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  (+1 more)
(+64 files in other folders)
